crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__modules__empty-3.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name
---

Some(
    Spanned(
        Module {
            name: Some(
                Spanned(
                    "name",
                    4..8,
                ),
            ),
            items: [],
        },
        0..8,
    ),
)

--- Errors ---
[
    ParseError {
        span: 2..8,
        reason: ExpectedFound {
            expected: [
                Semi,
                OpenBrace,
            ],
            found: None,
        },
    },
]
---
