crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__modules__recover_block-2.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod out { let in_1 = 0; ]
---

Some(
    (
        Module {
            name: Some(
                (
                    "out",
                    4..7,
                ),
            ),
            items: [],
        },
        0..7,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Module,
        ),
        span: 24..25,
        reason: Unclosed {
            span: 8..9,
            delimiter: OpenBrace,
        },
        found: CloseBracket,
        expected: [
            CloseBrace,
        ],
    },
    Error {
        label: Some(
            Module,
        ),
        span: 24..25,
        reason: Unexpected,
        found: CloseBracket,
        expected: [
            Func,
            Let,
            Mod,
            CloseBrace,
        ],
    },
]
---
