crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__modules__recover_block-8.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name { mod name mod name {] }
---

Some(
    (
        Module {
            name: Some(
                (
                    "name",
                    4..8,
                ),
            ),
            items: [],
        },
        0..8,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Module,
        ),
        span: 10..10,
        reason: Unclosed {
            span: 9..10,
            delimiter: OpenBrace,
        },
        found: Eof,
        expected: [
            CloseBrace,
        ],
    },
    Error {
        label: Some(
            Module,
        ),
        span: 10..10,
        reason: Unexpected,
        found: Eof,
        expected: [
            Func,
            Let,
            Mod,
            CloseBrace,
        ],
    },
]
---
